refactor(provider): wrap key attestation request jwks items in objects
Wrap items in the key attestations request jwks array in objects
containing the jwk string to allow adding metadata attributes per key
in the future without breaking changes.
